Fixed a bug for the height of pages where header height wasn't accounted for. Still got a bug with firefox on mobile for prosjekter.html and scaling

--- a/www/cover.css
+++ b/www/cover.css
@@ -26,6 +26,7 @@
   --spacing-small: 0.625rem;
   --spacing-medium: 1.25rem;
   --spacing-large: 2rem;
+  --header-height: 6rem;
   --border-radius: 0.5rem;
   --box-shadow: 0 0 0.625rem rgba(0, 0, 0, 0.1);
   --radius: 200px;
@@ -41,6 +42,7 @@ html, body {
 }
 
 body {
+  height: calc(100vh - var(--header-height));
   background-color: #131418; 
   background: url('/media/background.png') center center / cover repeat-y;
   background-attachment: fixed;
@@ -514,10 +516,9 @@ p {
 
 /* Cover container */
 .cover-container {
-  height: 100vh;
+  height: calc(100vh - var(--header-height));
   max-width: 100vw;
   margin-top: var(--spacing-small);
-  padding: var(--spacing-small);
 }
 
 .grid-cover-container {
@@ -587,7 +588,6 @@ p {
   font-family: var(--font-family-sans);
   font-weight: 300;
   font-size: var(--font-size-large);
-  padding: 1%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -597,7 +597,6 @@ p {
   border-radius: var(--border-radius);
   box-shadow: var(--box-shadow);
   color: white;
-  margin: 2% 0;
   z-index: 999;
 }
 
@@ -658,7 +657,7 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: calc(100vh - var(--header-height));
   width: 100vw;
   margin-left: 100px;
   margin-right: 100px;
@@ -872,6 +871,15 @@ p {
   flex-grow: 1;
   position: relative;
   z-index: 1000;
+}
+
+.nav-mobile {
+  padding: 1%;
+  margin-top: 1rem;
+  justify-content: end;
+  position: relative;
+  z-index: 1000;
+
 }
 
 .navbar-toggler {
